--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ mongodb = { version = "2.8.1", default-features = false, features = ["async-std-
 tokio = { version = "1.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+futures-util = "0.3"
