--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,9 @@ tokio = { version = "1.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 futures-util = "0.3"
+env_logger = "0.11"
+log = "^0.4"
+dotenv = "0.15.0" # to load env var
+reqwest = { version = "0.12", features = ["json"] }
+base64 = "0.13"
+anyhow = "1.0"
