add submodels/{id} endpoint

--- a/aas_client.env
+++ b/aas_client.env
@@ -5,6 +5,10 @@ AAS_IDSHORT=Murrelektronik_V000_CTXQ0_0100001_AAS
 AAS_IDENTIFIER=https://aas.murrelektronik.com/V000-CTXQ0-0100001/aas/1/0
 AAS_ASSET_IDENTIFIER=https://murrelektronik.com/v000-ctxq0-0100001
 
+DEVICE_NAME="LNI EDGE DEVICE"
+
+
+
 SERVER_POLLING_INTERVAL=10
 CLIENT_POLLING_INTERVAL=5
 
