--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -20,11 +20,15 @@ jobs:
         id: nextver
         run: |
           git fetch --tags
-          LATEST_TAG=$(git describe --tags `git rev-list --tags --max-count=1`)
+          LATEST_TAG=$(git describe --tags `git rev-list --tags --max-count=1` 2>/dev/null || echo "0.0.0")
           echo "Latest tag: $LATEST_TAG"
-          IFS='.' read -ra VER <<< "$LATEST_TAG"
-          PATCH=$((VER[2]+1))
-          NEXT_VERSION="${VER[0]}.${VER[1]}.$PATCH"
+          if [ "$LATEST_TAG" == "0.0.0" ]; then
+            NEXT_VERSION="1.0.0"
+          else
+            IFS='.' read -ra VER <<< "$LATEST_TAG"
+            PATCH=$((VER[2]+1))
+            NEXT_VERSION="${VER[0]}.${VER[1]}.$PATCH"
+          fi
           echo "Next version: $NEXT_VERSION"
           echo ::set-output name=version::$NEXT_VERSION
           echo "NEXT_VERSION=$NEXT_VERSION" >> $GITHUB_ENV
