--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -26,6 +26,12 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
       
+      # Step to debug
+      - name: Check current user and groups
+        run: |
+          whoami
+          groups
+      
       - name: Calculate next version
         id: nextver
         run: |
