--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -26,22 +26,50 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
       
+      # - name: Calculate next version
+      #   id: nextver
+      #   run: |
+      #     git fetch --tags
+      #     LATEST_TAG=$(git describe --tags `git rev-list --tags --max-count=1` 2>/dev/null || echo "0.0.0")
+      #     echo "Latest tag: $LATEST_TAG"
+      #     if [ "$LATEST_TAG" == "0.0.0" ]; then
+      #       NEXT_VERSION="1.0.0"
+      #     else
+      #       IFS='.' read -ra VER <<< "$LATEST_TAG"
+      #       PATCH=$((VER[2]+1))
+      #       NEXT_VERSION="${VER[0]}.${VER[1]}.$PATCH"
+      #     fi
+      #     echo "Next version: $NEXT_VERSION"
+      #     echo ::set-output name=version::$NEXT_VERSION
+      #     echo "NEXT_VERSION=$NEXT_VERSION" >> $GITHUB_ENV
       - name: Calculate next version
         id: nextver
         run: |
-          git fetch --tags
+          # Forcefully fetch tags from the remote, updating local tags to match remote
+          git fetch --tags --force
+
+          # Attempt to identify the latest tag, defaulting to "0.0.0" if none exist
           LATEST_TAG=$(git describe --tags `git rev-list --tags --max-count=1` 2>/dev/null || echo "0.0.0")
           echo "Latest tag: $LATEST_TAG"
+
+          # If no tags exist, start versioning from 1.0.0
           if [ "$LATEST_TAG" == "0.0.0" ]; then
             NEXT_VERSION="1.0.0"
           else
+            # Split the latest tag into major, minor, and patch numbers
             IFS='.' read -ra VER <<< "$LATEST_TAG"
-            PATCH=$((VER[2]+1))
+            PATCH=$((VER[2]+1)) # Increment the patch version
             NEXT_VERSION="${VER[0]}.${VER[1]}.$PATCH"
           fi
+
           echo "Next version: $NEXT_VERSION"
-          echo ::set-output name=version::$NEXT_VERSION
+          
+          # Set the calculated version as an output for other steps to use
+          echo "version=$NEXT_VERSION" >> $GITHUB_OUTPUT
+
+          # Also export it for use in this job
           echo "NEXT_VERSION=$NEXT_VERSION" >> $GITHUB_ENV
+        shell: /usr/bin/bash -e {0}
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
