--- a/docker_compose_package/aas_client.env
+++ b/docker_compose_package/aas_client.env
@@ -7,8 +7,8 @@ AAS_IDENTIFIER=https://aas.murrelektronik.com/V000-CTXQ0-0100001/aas/1/0
 
 AAS_ASSET_IDENTIFIER=https://murrelektronik.com/v000-ctxq0-0100001
 
+OFFBOARDING_TIME=30
 DEVICE_NAME="LNI EDGE DEVICE"
-
 
 
 SERVER_POLLING_INTERVAL=10
