update docker compose for dev test

--- a/aas_client.env
+++ b/aas_client.env
@@ -1,5 +1,5 @@
-MONGO_URI=mongodb://localhost:27015/mydatabase
-#MONGO_URI=mongodb://mongodb:27017/mydatabase
+#MONGO_URI=mongodb://localhost:27018/mydatabase
+MONGO_URI=mongodb://mongodb:27017/mydatabase
 AASX_SERVER=https://ca-aasxserverv3-dev-001.yellowtree-6659c4fd.northeurope.azurecontainerapps.io/
 AAS_IDSHORT=Murrelektronik_V000_CTXQ0_0100001_AAS
 AAS_IDENTIFIER=https://aas.murrelektronik.com/V000-CTXQ0-0100001/aas/1/0
