--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,9 +4,29 @@ networks:
   edge_network:
 
 services:
+  actix_web_app:
+    # image: manhlinh210/rust_aas_edge_client:amd64-1.0.14
+    build: 
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "18000:18000"
+    env_file:
+      - aas_client.env
+    volumes:
+      - /proc/meminfo:/host_proc/meminfo:ro
+      # - ./aas_client.env:/app/aas_client.env
+      - ./mount_volumes/backend/scripts/:/app/scripts/
+      - ./mount_volumes/backend/static/:/app/static/
+    networks:               # make it use same network to connect ports
+      - edge_network
+    depends_on:
+      - mongodb
+    restart: always
+
   mongodb:
-    image: mongo:4.4
-    container_name: rust_web_mongo_dev-4.4
+    image: mongo:4.4.18
+    container_name: rust_web_mongo-4.4
     ports:
       - "27015:27017"
     volumes:
@@ -14,3 +34,36 @@ services:
     # restart: always
     networks:               # make it use same network to connect ports
       - edge_network
+    restart: always
+
+  react-app:
+    container_name: react-app
+    # image: khaiyacoub/aas-lni-react-app:amd64v8-3.1.0
+    image: khaiyacoub/lni-aas-react-app:amd64-3.3.0
+    depends_on:
+      - mongodb
+      - actix_web_app
+    ports:
+      - "3000:3000"
+    volumes:
+      - type: bind
+        source: ./mount_volumes/frontend/
+        target: /app/build/mount_volume/
+    networks:
+      - edge_network
+    restart: always
+
+  # nginx container service serving the frontend and the backend
+  nginx:
+    container_name: lni-aas-edge-client-nginx
+    image: nginx:1.19.0 # use the official Nginx image
+    ports:
+      - "8081:8081"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - actix_web_app
+      - react-app
+    networks:
+      - edge_network
+    restart: always
