--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,34 +36,34 @@ services:
       - edge_network
     restart: always
 
-  react-app:
-    container_name: react-app
-    # image: khaiyacoub/aas-lni-react-app:amd64v8-3.1.0
-    image: khaiyacoub/lni-aas-react-app:amd64-3.3.0
-    depends_on:
-      - mongodb
-      - actix_web_app
-    ports:
-      - "3000:3000"
-    volumes:
-      - type: bind
-        source: ./mount_volumes/frontend/
-        target: /app/build/mount_volume/
-    networks:
-      - edge_network
-    restart: always
+  # react-app:
+  #   container_name: react-app
+  #   # image: khaiyacoub/aas-lni-react-app:amd64v8-3.1.0
+  #   image: khaiyacoub/lni-aas-react-app:amd64-3.3.0
+  #   depends_on:
+  #     - mongodb
+  #     - actix_web_app
+  #   ports:
+  #     - "3000:3000"
+  #   volumes:
+  #     - type: bind
+  #       source: ./mount_volumes/frontend/
+  #       target: /app/build/mount_volume/
+  #   networks:
+  #     - edge_network
+  #   restart: always
 
-  # nginx container service serving the frontend and the backend
-  nginx:
-    container_name: lni-aas-edge-client-nginx
-    image: nginx:1.19.0 # use the official Nginx image
-    ports:
-      - "8081:8081"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-    depends_on:
-      - actix_web_app
-      - react-app
-    networks:
-      - edge_network
-    restart: always
+  # # nginx container service serving the frontend and the backend
+  # nginx:
+  #   container_name: lni-aas-edge-client-nginx
+  #   image: nginx:1.19.0 # use the official Nginx image
+  #   ports:
+  #     - "8081:8081"
+  #   volumes:
+  #     - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+  #   depends_on:
+  #     - actix_web_app
+  #     - react-app
+  #   networks:
+  #     - edge_network
+  #   restart: always
