add logs to track error

--- a/aas_client.env
+++ b/aas_client.env
@@ -1,6 +1,6 @@
 #MONGO_URI=mongodb://localhost:27015/mydatabase
 MONGO_URI=mongodb://mongodb:27017/mydatabase
-AASX_SERVER=https://basyxaasenvironment.livelysky-74f9e49e.northeurope.azurecontainerapps.io/
+AASX_SERVER=https://basyxaasenvironment.lemonbeach-009193ef.northeurope.azurecontainerapps.io/
 AAS_IDSHORT=Murrelektronik_V000_CTXQ0_0100001_AAS
 AAS_IDENTIFIER=https://aas.murrelektronik.com/V000-CTXQ0-0100001/aas/1/0
 #AAS_IDENTIFIER=https://hilscher.com/ids/sm/6304_9072_3042_0369 #Hilscher
