--- a/docker_compose_package/docker-compose.yaml
+++ b/docker_compose_package/docker-compose.yaml
@@ -22,7 +22,7 @@ services:
 
   mongodb:
     image: mongo:4.4.18
-    container_name: rust_web_mongo-4.4
+    container_name: rust_aas_client-4.4
     ports:
       - "27015:27017"
     volumes:
